--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.33",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
     "react": "^19.0.0",
